@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc3
 
+	- Revamped the custom page size orientation fix (STR
+	  #127)
 	- The lp, lpq, lpr, and lpstat commands now report when
 	  an environment variable is pointing to a non-existent
 	  printer instead of just saying "no default
